--- a/home-japan-collection.html
+++ b/home-japan-collection.html
@@ -34,7 +34,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
     <link rel="stylesheet" href="css/bootstrap.css">
 
     <!-- Asia Theme -->
-    <link rel="stylesheet" href="css/portal.css">
+    <link rel="stylesheet" href="css/homepage-japan.css">
 
     <!-- Pictofonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -49,7 +49,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
     <![endif]-->
 </head>
 
-<body class="front">
+<body class="front japan">
 
     <header class="home">
 
@@ -287,11 +287,9 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
         </div>
 
-        <h3 class="collections">Collections</h2>
-
             <!-- CORNER -->
 
-            <img class="corner-hero"src="images/corner.svg">
+            <img class="corner-hero"src="images/corner-collection.svg">
 
 
             <!-- MIAN NAV -->
@@ -438,46 +436,6 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
     </section>
 
-    <section class="row collections">
-
-
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 collection">
-
-            <h4><a href="">East Asia (Wason)</a></h4>
-
-            <a href="#"><img class="img-responsive" alt="Responsive image" src="images/collection-image.jpg" /></a>
-
-
-            <p class="wason"><a href="#">China<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>  <a href="">Korea<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>  <a href="">Japan<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a></p>
-
-
-        </div>
-
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 collection">
-
-            <h4><a href="#">South Asia</a></h4>
-
-            <a href="#"><img class="img-responsive" alt="Responsive image" src="images/collection-image.jpg" /></a>
-
-
-            <p><a href="#">Afghanistan | Bangladesh | Bhutan | India | Nepal | Maldives | Pakistan | Sri Lanka</a></p>
-
-
-        </div>
-
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 collection">
-
-            <h4><a href="#">South East Asia (Echols)</a></h4>
-
-            <a href="#"><img class="img-responsive" alt="Responsive image" src="images/collection-image.jpg" /></a>
-
-
-            <p><a href="#">Brunei | Burma (Myanmar) | Cambodia | East Timor | Indonesia | Laos | Malaysia | the Philippines, Singapore | Thailand | Vietnam</a></p>
-
-        </div>
-
-    </section>
-
     <section class="row features">
 
 
@@ -517,34 +475,6 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
             <br />
 
             <h5>Contact Us</h5>
-
-        </div>
-
-
-    </section>
-
-    <section class="row news">
-
-
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 new">
-
-            <h6>News</h6>
-            <date>10/10/2016</date>
-            <p>Vestibulum dignissim quam tristique, pulvinar elit euismod, accumsan turpis purus sit amet interdum finibus.</p>
-
-        </div>
-
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 new">
-
-            <date>10/10/2016</date>
-            <p>Vestibulum dignissim quam tristique, pulvinar elit euismod, accumsan turpis purus sit amet interdum finibus.</p>
-        </div>
-
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 new">
-
-            <date>10/10/2016</date>
-            <p>Vestibulum dignissim quam tristique, pulvinar elit euismod, accumsan turpis purus sit amet interdum finibus.</p>
-            <p><a href="" class="btn-link">ALL NEWS</a> </p>
 
         </div>
 
