--- a/home-japan-collection.html
+++ b/home-japan-collection.html
@@ -299,12 +299,12 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
                 <ul class="first-level">
                     <li>
-                        <a class="active" id="home" href="#">Home</a> |
+                        <a id="home" href="#">Asia Library</a> |
                     </li>
 
                     <li>
 
-                        <a id="about" href="#">Collections<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
+                        <a id="about" href="#">All Collections<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
 
                         <div class="wrapper">
 
@@ -321,7 +321,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
                     <li>
 
-                        <a id="collections" href="#">About Us<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
+                        <a id="collections" href="#">Wason Collections<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
 
                         <div class="wrapper">
 
@@ -339,7 +339,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
                     </li>
 
                     <li>
-                        <a id="guides" href="#">Resources<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
+                        <a id="guides" href="#">Japan Resources<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
 
                         <div class="wrapper">
 
@@ -355,7 +355,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
                     </li>
 
                     <li>
-                        <a id="reference-and-instruction" href="/services">Services<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
+                        <a id="reference-and-instruction" href="/services">Contact Us<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
 
                         <div class="wrapper">
 
@@ -441,7 +441,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 feature">
 
-            <h5>Events</h5>
+            <h5>Pulvinar elit euismod</h5>
 
             <img class="img-responsive" alt="Responsive image" src="images/collection-image.jpg" />
 
@@ -453,13 +453,16 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 feature">
 
-            <h5>News & Highlights</h5>
+            <h5>Lorem Ipsum</h5>
 
             <ul>
                 <li>
                 Vestibulum dignissim quam tristique, pulvinar elit euismod, accumsan turpis purus sit amet interdum finibus.</li>
 
                 <li>Cras pharetra purus sit amet interdum finibus.</li>
+
+                 <li>
+                Vestibulum dignissim quam tristique, pulvinar elit euismod, accumsan turpis purus sit amet interdum finibus.</li>
             </ul>
 
             <p><a href="" class="btn-link">ALL NEWS & HIGHLIGHTS</a> </p>
@@ -468,13 +471,9 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 feature">
 
-            <h5>Islam in Asia</h5>
+            <h5>Quam tristique</h5>
 
-            <img class="img-responsive" alt="Responsive image" src="images/collection-image.jpg" />
-
-            <br />
-
-            <h5>Contact Us</h5>
+            <p>Vestibulum dignissim quam tristique, pulvinar elit euismod, accumsan turpis purus sit amet interdum finibus. Cras pharetra purus sit amet interdum finibus. Vestibulum dignissim quam tristique, pulvinar elit euismod, accumsan turpis purus sit amet interdum finibus.</p>
 
         </div>
 
