Create templates all collections for homepage

--- a/home-china-collection.html
+++ b/home-china-collection.html
@@ -34,7 +34,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
     <link rel="stylesheet" href="css/bootstrap.css">
 
     <!-- Asia Theme -->
-    <link rel="stylesheet" href="css/homepage-korea.css">
+    <link rel="stylesheet" href="css/homepage-china.css">
 
     <!-- Pictofonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -49,9 +49,9 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
     <![endif]-->
 </head>
 
-<body class="front asia-collection korea">
+<body class="front asia-collection china">
 
-    <header class="home" style="background-color: #484b50;">
+    <header class="home" style="background-color: #9d2825;"> 
 
         <!-- CU + CUL BRANDING -->
         <section class="CUL-branding">
@@ -64,7 +64,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="934.3px"
      height="125.7px" viewBox="0 0 934.3 125.7" enable-background="new 0 0 934.3 125.7" xml:space="preserve">
 <g id="COUNTRY">
-    <text transform="matrix(1 0 0 1 793.0047 90.8709)" opacity="0.63"><tspan x="0" y="0" fill="#FFFFFF" font-family="'Montserrat'" font-size="39.494">KOREA</text>
+    <text transform="matrix(1 0 0 1 793.0047 90.8709)" opacity="0.63"><tspan x="0" y="0" fill="#FFFFFF" font-family="'Montserrat'" font-size="39.494">CHINA</text>
 </g>
 <g id="REGION">
     <text transform="matrix(1 0 0 1 515.6714 90.8709)" fill="#FFFFFF" font-family="'Montserrat'" font-size="39.494">/ EAST ASIA/</text>
@@ -201,7 +201,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
         </section>
 
         <h1><a href="https://www.library.cornell.edu/">Cornell University Library</a></h1>
-        <h2><a href="/">THE ASIA COLLECTIONS/ </a><a href="/">EAST ASIA/ </a><a href="/">KOREA</a></h2>
+        <h2><a href="/">THE ASIA COLLECTIONS/ </a><a href="/">EAST ASIA/ </a><a href="/">CHINA</a></h2>
 
         <!-- USER TOOLS -->
 
@@ -270,7 +270,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
                     </li>
 
                     <li>
-                        <a id="guides" href="#">Korea Resources<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
+                        <a id="guides" href="#">China Resources<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
 
                         <div class="wrapper">
 
