--- a/home-portal.html
+++ b/home-portal.html
@@ -51,7 +51,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
 <body class="front">
 
-    <header class="home">
+    <header class="home" style="background-image: url('images/homepage-bg-hero.png');">
 
         <!-- CU + CUL BRANDING -->
         <section class="CUL-branding">
