--- a/home-southeast-asia-collection.html
+++ b/home-southeast-asia-collection.html
@@ -34,7 +34,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
     <link rel="stylesheet" href="css/bootstrap.css">
 
     <!-- Asia Theme -->
-    <link rel="stylesheet" href="css/homepage-korea.css">
+    <link rel="stylesheet" href="css/homepage-southeast.css">
 
     <!-- Pictofonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -49,9 +49,9 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
     <![endif]-->
 </head>
 
-<body class="front asia-collection korea">
+<body class="front asia-collection southeast">
 
-    <header class="home" style="background-color: #484b50;">
+    <header class="home" style="background-color: #a3620a;"> 
 
         <!-- CU + CUL BRANDING -->
         <section class="CUL-branding">
@@ -61,13 +61,14 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
             <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 18.1.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="934.3px"
-     height="125.7px" viewBox="0 0 934.3 125.7" enable-background="new 0 0 934.3 125.7" xml:space="preserve">
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="913.7px"
+     height="125.7px" viewBox="0 0 913.7 125.7" enable-background="new 0 0 913.7 125.7" xml:space="preserve">
 <g id="COUNTRY">
-    <text transform="matrix(1 0 0 1 793.0047 90.8709)" opacity="0.63"><tspan x="0" y="0" fill="#FFFFFF" font-family="'Montserrat'" font-size="39.494">KOREA</text>
 </g>
-<g id="REGION">
-    <text transform="matrix(1 0 0 1 515.6714 90.8709)" fill="#FFFFFF" font-family="'Montserrat'" font-size="39.494">/ EAST ASIA/</text>
+<g opacity="0.65" id="REGION">
+    <g>
+        <text transform="matrix(1 0 0 1 515.6714 90.8709)" fill="#FFFFFF" font-family="'Montserrat'" font-size="39.494">/ SOUTHEAST ASIA</text>
+    </g>
 </g>
 <g id="CUL_Logotype_1_">
     <text transform="matrix(1 0 0 1 145.3376 48.1821)" opacity="0.63"><tspan x="0" y="0" fill="#FFFFFF" font-family="'Montserrat'" font-size="27.6531">Cornell University Library</text>
@@ -160,31 +161,19 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
         c-32,0-57.9-26-57.9-57.9c0-32,26-58,57.9-58c32,0,57.9,26,57.9,58C121.3,95,95.3,121,63.3,121z"/>
 </g>
 <g opacity="0" id="shape_COUNTRY">
-    <a xlink:href="#">
-        <rect x="792.7" y="58.3" fill="#FFFFFF" width="139.5" height="34.1"/>
-    </a>
-</g>
-<g opacity="0" id="SHAPE_REGION">
-    <a xlink:href="#">
-        <rect x="533.4" y="59" fill="#FFFFFF" width="241.9" height="34.1"/>
-    </a>
+    <rect x="551.2" y="58.3" fill="#FFFFFF" width="362.4" height="34.1"/>
 </g>
 <g opacity="0" id="shape_UNIT">
-    <a xlink:href="#">
-        <rect x="141" y="61.7" fill="#FFFFFF" width="377.3" height="34.1"/>
-    </a>
+    <rect x="141" y="61.7" fill="#FFFFFF" width="377.3" height="34.1"/>
 </g>
 <g opacity="0" id="shape_CUL_logotype">
-    <a xlink:href="http://www.cornell.edu">
-        <rect x="141" y="20.2" fill="#FFFFFF" width="362" height="37.8"/>
-    </a>
+    <rect x="141" y="20.2" fill="#FFFFFF" width="362" height="37.8"/>
 </g>
 <g opacity="0" id="shape-insignia">
-    <a xlink:href="http://www.cornell.edu">
-        <circle fill="#FFFFFF" cx="65.6" cy="60.7" r="60.7"/>
-    </a>
+    <circle fill="#FFFFFF" cx="65.6" cy="60.7" r="60.7"/>
 </g>
 </svg>
+
 
 
         <!-- <g opacity="0" id="shape_cu_insignia">
@@ -201,7 +190,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
         </section>
 
         <h1><a href="https://www.library.cornell.edu/">Cornell University Library</a></h1>
-        <h2><a href="/">THE ASIA COLLECTIONS/ </a><a href="/">EAST ASIA/ </a><a href="/">KOREA</a></h2>
+        <h2><a href="/">THE ASIA COLLECTIONS/ </a><a href="/">SOUTHEAST ASIA</a></h2>
 
         <!-- USER TOOLS -->
 
@@ -251,26 +240,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
                     </li>
 
                     <li>
-
-                        <a id="collections" href="#">Wason Collections<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
-
-                        <div class="wrapper">
-
-                            <ul class="second-level">
-
-                                 <li><a href="#">Second Level</a></li>
-                                 <li><a href="#">Second Level</a></li>
-                                 <li><a href="#">Second Level</a></li>
-                                 <li><a href="#">Second Level</a></li>
-
-                            </ul>
-
-                        </div>
-
-                    </li>
-
-                    <li>
-                        <a id="guides" href="#">Korea Resources<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
+                        <a id="guides" href="#">Southeast Resources<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
 
                         <div class="wrapper">
 
