--- a/home-japan-collection.html
+++ b/home-japan-collection.html
@@ -51,7 +51,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
 <body class="front asia-collection japan">
 
-    <header class="home">
+    <header class="home" style="background-color: #9c6dba;"> 
 
         <!-- CU + CUL BRANDING -->
         <section class="CUL-branding">
