--- a/intetior-page.html
+++ b/intetior-page.html
@@ -82,11 +82,6 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
                 </button>
 
             </div>
-
-            <ul class="external-search">
-              <li><a href="/selecteddatabases">Databases</a> / </li>
-              <li><a href="/guides">Research Guides</a></li>
-            </ul>
         </form>
 
     </div>
@@ -97,7 +92,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
   <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 </a>
 
-<header class="interior">
+<header class="interior"  style="background-image: url('images/homepage-bg-hero.png');">
 
     <section class="CUL-branding">
 
@@ -240,6 +235,8 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
     <h1><a href="https://www.library.cornell.edu/">Cornell University Library</a></h1>
     <h2><a href="/">THE ASIA COLLECTIONS/ </a><a href="/">EAST ASIA/ </a><a href="/">KOREA</a></h2>
 
+    <a class="search-icon show-hide-search" title="Search our Site" href="#"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a>
+
     <!-- USER TOOLS -->
 
     <div class="help">
@@ -369,7 +366,13 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
 </header>
 
+<div class="sub-section">
+    <h3 >SUBSECTION HEADER</h3>
+</div>
+
 <section class="row page-content">
+
+    
 
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 content-item">
 
