Add south asia cover image

--- a/home-south-asia-collection.html
+++ b/home-south-asia-collection.html
@@ -52,6 +52,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 <body class="front asia-collection south">
 
     <header class="home" style="background-color: #366983;"> 
+    <header class="home" style="background-image: url('images/south-bg-hero.png');">
 
         <!-- CU + CUL BRANDING -->
         <section class="CUL-branding">
