--- a/home-south-asia-collection.html
+++ b/home-south-asia-collection.html
@@ -34,7 +34,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
     <link rel="stylesheet" href="css/bootstrap.css">
 
     <!-- Asia Theme -->
-    <link rel="stylesheet" href="css/homepage-south.css">
+    <link rel="stylesheet" href="css/south-asia-collection.css">
 
     <!-- Pictofonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -51,7 +51,6 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
 <body class="front asia-collection south">
 
-    <header class="home" style="background-color: #366983;"> 
     <header class="home" style="background-image: url('images/south-bg-hero.png');">
 
         <!-- CU + CUL BRANDING -->
