--- a/home-echols-asia-collection.html
+++ b/home-echols-asia-collection.html
@@ -34,7 +34,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
     <link rel="stylesheet" href="css/bootstrap.css">
 
     <!-- Asia Theme -->
-    <link rel="stylesheet" href="css/china-collection.css">
+    <link rel="stylesheet" href="css/southeast-asia-collection.css">
 
     <!-- Pictofonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -49,25 +49,26 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
     <![endif]-->
 </head>
 
-<body class="front asia-collection china">
+<body class="front asia-collection southeast">
 
-    <header class="home" style="background-color: #9d2825;"> 
+    <header class="home" style="background-color: #a3620a;"> 
 
         <!-- CU + CUL BRANDING -->
         <section class="CUL-branding">
 
-            <!--<?php echo file_get_contents($theme_path . "images/cul-asia-china-logo.svg"); ?>-->
+            <!--<?php echo file_get_contents($theme_path . "images/cul-asia-echols-logo.svg"); ?>-->
 
-            <?xml version="1.0" encoding="utf-8" ?>
+            <?xml version="1.0" encoding="utf-8"?>
             <!-- Generator: Adobe Illustrator 18.1.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
             <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="934.3px"
-                 height="125.7px" viewBox="0 0 934.3 125.7" enable-background="new 0 0 934.3 125.7" xml:space="preserve">
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="913.7px"
+                 height="125.7px" viewBox="0 0 913.7 125.7" enable-background="new 0 0 913.7 125.7" xml:space="preserve">
             <g id="COUNTRY">
-                <text transform="matrix(1 0 0 1 793.0047 90.8709)" opacity="0.63"><tspan x="0" y="0" fill="#FFFFFF" font-family="'Montserrat'" font-size="39.494">CHINA</text>
             </g>
-            <g id="REGION">
-                <text transform="matrix(1 0 0 1 515.6714 90.8709)" fill="#FFFFFF" font-family="'Montserrat'" font-size="39.494">/ EAST ASIA/</text>
+            <g opacity="0.65" id="REGION">
+                <g>
+                    <text transform="matrix(1 0 0 1 515.6714 90.8709)" fill="#FFFFFF" font-family="'Montserrat'" font-size="39.494">/ SOUTHEAST ASIA</text>
+                </g>
             </g>
             <g id="CUL_Logotype_1_">
                 <text transform="matrix(1 0 0 1 145.3376 48.1821)" opacity="0.63"><tspan x="0" y="0" fill="#FFFFFF" font-family="'Montserrat'" font-size="27.6531">Cornell University Library</text>
@@ -160,13 +161,8 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
                     c-32,0-57.9-26-57.9-57.9c0-32,26-58,57.9-58c32,0,57.9,26,57.9,58C121.3,95,95.3,121,63.3,121z"/>
                 </g>
                 <g opacity="0" id="shape_COUNTRY">
-                    <a xlink:href="/collections/wason/china">
-                        <rect x="792.7" y="58.3" fill="#FFFFFF" width="139.5" height="34.1"/>
-                    </a>
-                </g>
-                <g opacity="0" id="SHAPE_REGION">
-                    <a xlink:href="/collections/wason">
-                        <rect x="533.4" y="59" fill="#FFFFFF" width="241.9" height="34.1"/>
+                    <a xlink:href="/collections/echols">
+                        <rect x="551.2" y="58.3" fill="#FFFFFF" width="362.4" height="34.1"/>
                     </a>
                 </g>
                 <g opacity="0" id="shape_UNIT">
@@ -186,6 +182,9 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
                 </g>
             </svg>
 
+
+
+
         </section>
 
         <section class="CUL-branding-mobile">
@@ -196,7 +195,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
         </section>
 
         <h1><a href="https://www.library.cornell.edu/">Cornell University Library</a></h1>
-        <h2><a href="/">THE ASIA COLLECTIONS/ </a><a href="/">EAST ASIA/ </a><a href="/">CHINA</a></h2>
+        <h2><a href="/">THE ASIA COLLECTIONS/ </a><a href="/">SOUTHEAST ASIA</a></h2>
 
         <!-- USER TOOLS -->
 
@@ -246,26 +245,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
                     </li>
 
                     <li>
-
-                        <a id="collections" href="#">Wason Collections<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
-
-                        <div class="wrapper">
-
-                            <ul class="second-level">
-
-                                 <li><a href="#">Second Level</a></li>
-                                 <li><a href="#">Second Level</a></li>
-                                 <li><a href="#">Second Level</a></li>
-                                 <li><a href="#">Second Level</a></li>
-
-                            </ul>
-
-                        </div>
-
-                    </li>
-
-                    <li>
-                        <a id="guides" href="#">China Resources<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
+                        <a id="guides" href="#">Southeast Resources<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a> |
 
                         <div class="wrapper">
 
