--- a/home-portal.html
+++ b/home-portal.html
@@ -56,7 +56,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
         <!-- CU + CUL BRANDING -->
         <section class="CUL-branding">
 
-            <!--<?php echo file_get_contents($theme_path . "images/cul-asia-logo.svg"); ?>-->
+            <!--<?php echo file_get_contents($theme_path . "../images/cul-asia-logo.svg"); ?>-->
 
             <?xml version="1.0" encoding="utf-8" ?>
             <!-- Generator: Adobe Illustrator 19.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -253,7 +253,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
                 </g>
                 <g opacity="0" id="shape_UNIT">
-                    <a xlink:href="/">
+                    <a xlink:href="/collections">
                         <rect x="141" y="63" fill="#FFFFFF" width="377.3" height="34.1" />
                     </a>
                 </g>
