--- a/home-japan-collection.html
+++ b/home-japan-collection.html
@@ -51,7 +51,7 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
 <body class="front asia-collection japan">
 
-    <header class="home" style="background-color: #9c6dba;"> 
+    <header class="home" style="background-image: url('images/homepages-hero-images/homepage-wason-japan-1.jpg');"> 
 
         <!-- CU + CUL BRANDING -->
         <section class="CUL-branding">
@@ -215,10 +215,22 @@ $theme_path = drupal_get_path('theme',$GLOBALS['theme']) . '/';
 
         </div>
 
-            <!-- CORNER -->
+            <!-- ROUNDED CORNER FOR HERO IMAGES-->
 
-            <img class="corner-hero"src="images/corner-collection.svg">
+            <div class="corner-hero">
 
+                <!--<?php echo file_get_contents($theme_path . "images/corner.svg"); ?>-->
+
+                <?xml version="1.0" encoding="utf-8"?>
+                <!-- Generator: Adobe Illustrator 19.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                     width="223.1px" height="175.2px" viewBox="0 0 223.1 175.2" enable-background="new 0 0 223.1 175.2" xml:space="preserve">
+                <path fill="#CFB067" d="M0,175.2c0,0,225.6,12.3,223.1-175.2v175.2H0z"/>
+                <rect x="297.8" y="42.6" fill="#CFB067" width="74.2" height="58.3"/>
+                </svg>
+
+            </div>
 
             <!-- MIAN NAV -->
             <a class="sandwich" href="#" title="Show navigation"></a>
